Bugfix - Play button will not overlap search bar results

--- a/styles/p-vid.css
+++ b/styles/p-vid.css
@@ -45,7 +45,7 @@
   position: absolute;
   top: 30%;
   width: 15%;
-  z-index: 2;
+  z-index: 1;
 }
 
 #main-block {
